# primes

./: Dockerfile  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  main.c
