
# Sources and Examples Used
# http://inti.sourceforge.net/tutorial/libinti/autotoolsproject.html
# http://www.gnu.org/savannah-checkouts/gnu/automake/manual/html_node/aclocal-Options.html#aclocal-Options
# http://www.gnu.org/software/automake/manual/automake.html
# http://tomlee.co/2012/08/autotools-for-humans-part-1/

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src
EXTRA_DIST = autogen.sh