
# Sources and Examples Used
# http://inti.sourceforge.net/tutorial/libinti/autotoolsproject.html
# http://www.gnu.org/savannah-checkouts/gnu/automake/manual/html_node/aclocal-Options.html#aclocal-Options
# http://www.gnu.org/software/automake/manual/automake.html
# http://tomlee.co/2012/08/autotools-for-humans-part-1/

# Name of the target
bin_PROGRAMS = primes

# Add macro for compiler flags
primes_CFLAGS = -Wall

# Source files to build
primes_SOURCES = main.c
primes_LDADD = 
	